# BAAP

./: README.md
ОАиП/: .~lock.Инструкция.odt#  Инструкция.odt
ОАиП/LR1/: CMakeLists.txt  Task  Task_3.cpp  Лабораторная работа 1.odg  Резюме.odt  Сравнение.xlsx  блоксхема.docx
ОАиП/LR2/: Инструкция.odt  Лабораторная работа 2.odg
ОАиП/LR2/Sanitizers/: Address.cpp  Leak.cpp  Thread.cpp  Undefined.cpp  main
ОАиП/LR2/Task_1/: -fsanitize=thread  EXE  Task_1  Task_1.cpp
ОАиП/LR2/Task_10/: Task_10  Task_10.cpp
ОАиП/LR2/Task_11/: EXE  Task  Task_11  Task_11.cpp
ОАиП/LR2/Task_12/: ADDRESS  Task_12  Task_12.cpp  Thread
ОАиП/LR2/Task_13/: Task_13  Task_13.cpp
ОАиП/LR2/Task_2/: EXE  Task  Task_2  Task_2.cpp
ОАиП/LR2/Task_3/: EXE  Task_3  Task_3.cpp
ОАиП/LR2/Task_4/: Task_4  Task_4.cpp
ОАиП/LR2/Task_5/: Task_5  Task_5.cpp
ОАиП/LR2/Task_6/: Task_6  Task_6.cpp
ОАиП/LR2/Task_7/: Task_7  Task_7.cpp
ОАиП/LR2/Task_8/: -fsanitize=address  ADDRESS  Address.txt  CMakeLists.txt  EXE  LEAK  Leak.txt  THREAD  Task_8  Task_8.cpp  Thread.txt  UNDEFINED  Undefined.txt
ОАиП/LR2/Task_9/: Task_9  Task_9.cpp
ОАиП/LR3/: LICENSE
ОАиП/LR3/Task_1/: Task_1.cpp
ОАиП/LR3/Task_2/: Task_2.cpp
ОАиП/LR3/Task_3/: Task_3.cpp
ОАиП/LR3/Task_4/: Task_4.cpp
ОАиП/LR3/Task_5/: Task_5.cpp
ОАиП/LR3/Task_6/: Task_6.cpp
ОАиП/LR4/Task_3/Tests/: CMakeLists.txt  Tests.cpp
ЯНДЕКСТРЕНИ/: binarytree  binarytree.cpp  deletemedian.cpp  deque.cpp  deticount.cpp  infix.cpp  lca.cpp  module.cpp  postfix.cpp  prefixsum.cpp  skob.cpp  stack.cpp  treeheiht.cpp  twoukaz.cpp  vector.cpp
(+370 files in other folders)
